[package]
name = "linker"
version = "0.1.0"
edition = "2024"
description = "Link manager from the terminal"
license = "MIT"
readme = "README.md"
repository = ""

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
open = "4.0"
url = "2.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
