[package]
name = "linker-cli"
version = "0.1.2"
edition = "2024"
description = "Link manager from the terminal"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChristianRegueiro/linker"
homepage = "https://github.com/ChristianRegueiro/linker"
keywords = ["cli", "links", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
open = "4.0"
url = "2.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
